[gd_scene format=3 uid="uid://c6xf70epj2jwv"]

[ext_resource type="PackedScene" uid="uid://bj541456lkyw7" path="res://scenes/prefabs/TextBoxScene.tscn" id="1_n53ua"]
[ext_resource type="Script" uid="uid://dkyk2cy6xh17b" path="res://scripts/DialogueBasique.gd" id="2_103rn"]
[ext_resource type="Script" uid="uid://cjqjuneh6ab3m" path="res://scripts/ButtonManagerScene1.gd" id="2_njdwn"]

[node name="Main" type="Control" unique_id=859591191]
layout_mode = 3
anchors_preset = 0
offset_right = 1925.0
offset_bottom = 1077.0

[node name="ColorRect" type="ColorRect" parent="." unique_id=969719086]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="textBox" parent="." unique_id=1163237783 instance=ExtResource("1_n53ua")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.601
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.27703857
offset_right = 0.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_103rn")

[node name="Panneau boutons" type="PanelContainer" parent="." unique_id=105831089]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33200002
anchor_top = 0.47400004
anchor_right = 0.69600004
anchor_bottom = 0.47400004
offset_left = 0.8999634
offset_top = -150.49805
offset_right = 0.19995117
offset_bottom = -0.49804688
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panneau boutons" unique_id=314961854]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="oui" type="Button" parent="Panneau boutons/HBoxContainer" unique_id=1882490337]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Oui"
script = ExtResource("2_njdwn")

[node name="non" type="Button" parent="Panneau boutons/HBoxContainer" unique_id=120904489]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Non"
script = ExtResource("2_njdwn")

[node name="Timer" type="Timer" parent="." unique_id=164310206]

[connection signal="pressed" from="Panneau boutons/HBoxContainer/oui" to="Panneau boutons/HBoxContainer/oui" method="_on_oui_pressed"]
[connection signal="pressed" from="Panneau boutons/HBoxContainer/non" to="Panneau boutons/HBoxContainer/non" method="_on_non_pressed"]

[editable path="textBox"]
